# SCTest

./: .gitignore  CMakeLists.txt  README.md  sc_test.h  tutorial.md
cmake/: Config.cmake.in
cmake/Modules/: FindSystemC.cmake
include/: sc_test.h
src/: sc_test.cpp
