CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SCTest)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
find_package(SystemC REQUIRED) 
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${SYSTEMC_INCLUDE_DIRS})

#build
set(LIB_TARGET sc_test)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ADD_LIBRARY(${LIB_TARGET} ${PROJECT_SOURCE_DIR}/src/sc_test.cpp)
TARGET_LINK_LIBRARIES(${LIB_TARGET} ${SYSTEMC_LIBRARIES})

#generate config file
set(PROJ_CONFIG "${PROJECT_NAME}Config.cmake")
configure_file(
	"${PROJECT_SOURCE_DIR}/cmake/Config.cmake.in" 
	"${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJ_CONFIG}"
	@ONLY)

#install
INSTALL(TARGETS ${LIB_TARGET} DESTINATION lib)
INSTALL(FILES "${PROJECT_SOURCE_DIR}/include/sc_test.h" DESTINATION include)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJ_CONFIG}
	DESTINATION lib/cmake)

